# siip

./: .gitignore  Backlog.md  Readme.md
client/: README.md  account.py  add.sh  balance.py  certificate.py  extrinsics.py  modify.py  plow.py  plow.sh  props.sh  queries.py  register.py  remove.py  requirements.txt  sip.sh  test.sh  transfer.py  types.json
node/: Makefile  README.md  docker-compose.yml  network-test.py
node/.github/workflows/: check.yml
node/consensus/sha3pow/src/: lib.rs
node/doc/: hardware-considerations.md
node/node/: Cargo.toml
node/node/src/: service.rs
node/pallets/siip/: Cargo.toml
node/pallets/siip/src/: mock.rs
node/runtime/src/: reward_miner.rs
proxy/: README.md  gen_cert.sh  httpparse.py  proxy.py  requirements.txt  siip_certificate.py  siip_requests.py  siip_resolve.py
substrate-node/: .dockerignore  Cargo.toml  Dockerfile  Makefile
substrate-node/consensus/sha3pow/: Cargo.toml
substrate-node/consensus/sha3pow/src/: lib.rs
substrate-node/doc/: hardware-considerations.md
substrate-node/node/: Cargo.toml
substrate-node/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
substrate-node/node/src/service/: miner.rs
substrate-node/pallets/siip/: Cargo.toml
substrate-node/pallets/siip/src/: lib.rs  mock.rs  tests.rs
substrate-node/runtime/: Cargo.toml
substrate-node/runtime/src/: lib.rs  reward_miner.rs
substrate-node/scripts/util/: add.sh  domains.txt  dump.rb  feed.sh  head.sh  plow.sh  rpcs.sh  sip.sh  slurp.sh  test.sh
substrate-ui/: package-lock.json  package.json
substrate-ui/src/: AccountSelector.js  App.js  Chain.js  Democracy.css  Democracy.js  GettersAndSetters.js  Interactor.js  Metrics.js  SiipCommon.js  TransferCert.js  TransferCoins.js  routes.js  utilities.css  utils.js
substrate-ui/src/config/: types.json
substrate-ui/src/css/: GettersAndSetters.css  Header.css  Siip.css
substrate-ui/src/democracy/: Democracy.css  PreimageModal.js  ProposalModal.js  VoteModal.js  index.js  useCall.js
substrate-ui/src/substrate-lib/components/: TxButton.js
ui/: package.json
ui/src/: App.js  Chain.js  GettersAndSetters.js  Header.js  TransferCoins.js  index.css  index.js  utils.js
ui/src/config/: types.json
ui/src/css/: GettersAndSetters.css  Siip.css
ui/src/democracy/: ConvictionsDropdown.js  PreimageModal.js  ProposalModal.js  index.js
