[package]
authors = ['Troy Honegger', 'Sam Bove', 'Caleb Smith', 'Adrian Teigen', 'Troy Gayman']
build = 'build.rs'
description = 'A Substrate node implementing a Secure Internet Identification Protocol (SIIP) Server'
edition = '2018'
license = 'Unlicense'
name = 'siip-node'
repository = 'https://github.com/troyhonegger/siip'
version = '0.0.1'
keywords = ['siip', 'substrate', 'blockchain', 'dns', 'https']

[[bin]]
name = 'siip-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

# RPC Stuff
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"

# local dependencies
siip-node-runtime = { path = '../runtime', version = '0.0.1' }
sha3pow = { path = '../consensus/sha3pow', version = '0.0.1' }

# Substrate dependencies
frame-benchmarking = '3.0.0'
frame-benchmarking-cli = '3.0.0'
log = { version = "0.4.14", features = ["std", "serde"] }
pallet-transaction-payment-rpc = '3.0.0'
parking_lot = { version = '0.11.1' }
sc-basic-authorship = '0.9.0'
sc-cli = { features = ['wasmtime'], version = '0.9.0' }
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-pow = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-keystore = '3.0.0'
sc-rpc = '3.0.0'
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-transaction-pool = '3.0.0'
sp-api = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-core = '3.0.0'
sp-inherents = '3.0.0'
sp-io = '3.0.0'
sp-runtime = '3.0.0'
sp-transaction-pool = '3.0.0'
substrate-frame-rpc-system = '3.0.0'

hex = '0.4.3'

[features]
default = []
runtime-benchmarks = ['siip-node-runtime/runtime-benchmarks']
