[package]
authors = ['Troy Honegger', 'Sam Bove', 'Caleb Smith', 'Adrian Teigen', 'Troy Gayman']
build = 'build.rs'
description = 'A Substrate node implementing a Secure Internet Identification Protocol (SIIP) Server'
edition = '2018'
license = 'Unlicense'
name = 'siip-node'
repository = 'https://github.com/troyhonegger/siip'
version = '0.0.1'
keywords = ['siip', 'substrate', 'blockchain', 'dns', 'https']

[[bin]]
name = 'siip-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '2.0.1'

[dependencies]
jsonrpc-core = '15.0.0'
structopt = '0.3.8'

# RPC Stuff
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"

# local dependencies
siip-node-runtime = { path = '../runtime', version = '0.0.1' }
sha3pow = { path = '../consensus/sha3pow', version = '2.0.0' }

# Substrate dependencies
frame-benchmarking = '2.0.1'
frame-benchmarking-cli = '2.0.1'
log = { version = "0.4", features = ["std", "serde"] }
pallet-transaction-payment-rpc = '2.0.1'
parking_lot = { version = "0.10.0" }
sc-basic-authorship = '0.8.1'
sc-cli = { features = ['wasmtime'], version = '0.8.1' }
sc-client-api = '2.0.1'
sc-consensus = '0.8.1'
sc-consensus-pow = '0.8.1'
sc-executor = { features = ['wasmtime'], version = '0.8.1' }
sc-rpc = '2.0.1'
sc-rpc-api = '0.8.1'
sc-service = { features = ['wasmtime'], version = '0.8.1' }
sc-transaction-pool = '2.0.1'
sp-api = '2.0.1'
sp-block-builder = '2.0.1'
sp-blockchain = '2.0.1'
sp-consensus = '0.8.1'
sp-core = '2.0.1'
sp-inherents = '2.0.1'
sp-runtime = '2.0.1'
sp-transaction-pool = '2.0.1'
substrate-frame-rpc-system = '2.0.1'

[features]
default = []
runtime-benchmarks = ['siip-node-runtime/runtime-benchmarks']
