[package]
authors = ['Troy Honegger', 'Sam Bove', 'Caleb Smith', 'Adrian Teigen', 'Troy Gayman']
description = 'A Substrate FRAME pallet for managing SIIP certificates.'
edition = '2018'
license = 'Unlicense'
name = 'pallet-siip'
repository = 'https://github.com/troyhonegger/siip'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.1' }
sp-io = { default-features = false, version = '2.0.1' }
sp-runtime = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
